# Agora-Minecraft-Mod-Loader

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  Cargo.toml  README.md  REGISTRY_CURATION_REFERENCE.md  THIRD_PARTY_NOTICES.md  commands.rs  gemini-code-1782604464165.md  lib.rs  mcp_debug_handoff.md  mod_install.rs
.github/workflows/: ci-enforcement.yml  compile.yml  e2e.yml  refresh-loader-catalog.yml  release-desktop.yml  web-build.yml
.kilo/: kilo.json
.kilo/agent/: brain.md  code.md  registry-curator.md  security.md  worker.md
.kilo/plans/: 1782081355093-crash-investigator-plan.md  MASTER_SPEC.md  dependency-aware-mod-ops-plan.md
.kilo/skills/agora-architecture/: SKILL.md
.kilo/skills/agora-mcp/: SKILL.md
.kilo/skills/registry-curation/: SKILL.md
.kilo/skills/tauri-security/: SKILL.md
compiler/: _test_social_metrics.py  analyze_sha256.py  compile.py  test_compile.py
crates/agora/: Cargo.toml
crates/agora-core/: Cargo.toml
crates/agora-core/src/: ai_assistant.rs  auth.rs  browse_cache.rs  crash_service.rs  db.rs  dependency_ops.rs  download.rs  error.rs  gc.rs  github_ratelimit.rs  governance.rs  health.rs  http_client.rs  import.rs  import_service.rs  install_pipeline.rs  install_service.rs  installed_artifact.rs  instance_service.rs  jar_metadata.rs  java.rs  launch.rs  launch_planner.rs  launch_service.rs  launcher_profiles.rs  lib.rs  loader_manifests.rs  loadout.rs  mod_cache.rs  models.rs  modrinth.rs  msa.rs  network.rs  override_sanitizer.rs  pack_install.rs  process_identity.rs  registry.rs  registry_sync.rs  resolver.rs  runtime_catalog.rs  (+6 more)
crates/agora-core/src/catalog/: modrinth_source.rs
crates/agora-core/tests/: launch_planner_integration.rs
crates/agora/src/: main.rs
crates/agora/tests/: cli_integration.rs
desktop/: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
desktop/e2e/: appearance.spec.ts  browse.spec.ts  guide.spec.ts  home.spec.ts  install-flow.spec.ts  instance-editor-reproducible.spec.ts  instance-editor-snapshots.spec.ts  launcher-path.spec.ts  layout.spec.ts  onboarding.spec.ts  settings.spec.ts  startup-theme.spec.ts  structured-error-parsing.spec.ts
desktop/playwright-report/: index.html
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: ai_assistant.rs  auth.rs  commands.rs  crash_diagnostics.rs  crash_investigator.rs  db.rs  dependency_ops.rs  download.rs  error.rs  governance.rs  install_pipeline.rs  instances.rs  launcher_profiles.rs  lib.rs  loader_manifests.rs  main.rs  mcp.rs  mod_install.rs  models.rs  modrinth_raw.rs  mojang.rs  override_sanitizer.rs  paths.rs  registry.rs  registry_sync.rs  version_cache.rs
desktop/src/components/: AiAssistant.tsx  BrandMark.tsx  CrashInvestigator.tsx  DependencyPrompt.tsx  HealthDialog.tsx  InstallFlow.tsx  Sidebar.tsx  command-palette.tsx  registry-status-view.tsx
desktop/src/components/theme/: theme-provider.tsx
desktop/src/data/: guideContent.ts
desktop/src/i18n/: index.ts
desktop/src/i18n/locales/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  ta.json  te.json  tr.json  ur.json  vi.json  zh.json
desktop/src/lib/: tauri.ts  useDestination.ts  useProcessController.ts  useRegistryState.ts  useTypedSettings.ts
desktop/src/pages/: Browse.tsx  Governance.tsx  Guide.tsx  Home.tsx  InstanceEditor.tsx  Instances.tsx  ModDetail.tsx  ModrinthRaw.tsx  Onboarding.tsx  Privacy.tsx  Settings.tsx
desktop/src/pages/settings/: AppearanceSettings.tsx
loader-manifests/: known_good_hashes.json  loader_manifests.json  minecraft_versions.json
registry/governance/: audit_log.json  known_conflicts.json
registry/mods/: fabric-api.json  iris.json  lithium.json  sodium.json  xaeros-minimap.json
registry/packs/: optimized-survival.json
runtime-catalog/: runtime_catalog.json
scripts/: fetch_loader_manifests.py  generate_runtime_catalog.py  refresh_loader_manifests.py  test_scripts.py
web/: README.md  next.config.js  package-lock.json  package.json
web/public/: CNAME
web/src/app/: layout.tsx  page.tsx
web/src/app/[type]/: page.tsx
web/src/app/[type]/[id]/: page.tsx
web/src/app/about/: page.tsx
web/src/components/: Catalog.tsx  DownloadButton.tsx  MarkdownRenderer.tsx  Shell.tsx
web/src/lib/: db.ts  site.ts
