[package]
name = "agora-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Agora launcher core — shared business logic for the Tauri GUI, CLI, and MCP listener"

[lib]
name = "agora_core"
path = "src/lib.rs"

[dependencies]
# Pure logic only. NO tauri, clap, or MCP-protocol crates may appear here —
# the core must stay UI-agnostic so all three front-ends (Tauri GUI, agora
# CLI, agora serve MCP) can consume it equally. (Plan constraint C2/C3.)
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
ed25519-dalek = { workspace = true }
zip = "0.6"
urlencoding = "2"
async-trait = { workspace = true }
keyring = "2"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
p256 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
