[package]
name = "agora-desktop"
version = "0.1.0"
description = "Agora Minecraft Mod Launcher"
authors = ["Agora Contributors"]
edition = "2021"

[lib]
name = "agora_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agora-core = { path = "../../crates/agora-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
urlencoding = "2"
trash = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs = "5"
sysinfo = { workspace = true }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rfd = "0.14"

ed25519-dalek = { version = "2", features = ["alloc"] }
zip = "0.6"
keyring = "2"
aes-gcm = "0.10"
pbkdf2 = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

